@startuml
'https://plantuml.com/class-diagram

interface AccountService {
    +createAccount();
    +deposit();
    +withdrow();
    +addInterest();
}

abstract AccountServiceApplicationFactory{
    +{abstract}createAccount();
    +deposit();
    +withdrow();
    +addInterest();
    +getAllAccounts();
    +getAccount();
}

interface StorageFactory {
    +createAccountDAO();
    +createCustomerDAO();
    +createAccountEntryDAO();
}
'new Account product with subclasses
abstract Account
class CheckingAccount
class SavingAccount
class CreditCardAccount
class BronzeAccount
class SilverAccount
class GoldAccount
'diagram
CheckingAccount --|> Account
SavingAccount --|> Account
CreditCardAccount --|> Account
GoldAccount --|> CreditCardAccount
SilverAccount --|> CreditCardAccount
BronzeAccount --|> CreditCardAccount

'Observer pattern for notifiyer
interface StateNotifyer
Interface Observer
class BankEmailSender
class CreditCardEmailSender

Observer --> StateNotifyer
BankEmailSender ..|> Observer
CreditCardEmailSender ..|> Observer

AccountServiceApplicationFactory --> StateNotifyer

abstract class InterestState {
    +getInterest();
}
class SavingInterestLowState
class SavingInterestMidState
class SavingInterestHighState
SavingInterestHighState ..|> InterestState
SavingInterestLowState ..|> InterestState
SavingInterestMidState ..|> InterestState

InterestState <-* Account
AccountServiceApplicationFactory ..|> AccountService
AccountServiceImpl --|> AccountServiceApplicationFactory
CCardServiceImpl --|> AccountServiceApplicationFactory

AccountServiceApplicationFactory ..> StorageFactory
Account <-- AccountServiceApplicationFactory

Command <|-- ReportCommand
Command <|-- AddInterestCommand
Command <|-- DepositCommand
Command <|-- WidthdrawCommand

Invoker  -- Command
ApplicationFrm -- Invoker
ApplicationFrm -- AccountServiceApplicationFactory


@enduml
